<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_rect"
        android:orientation="vertical">


    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/rate_us_dialog"
                android:textColor="@color/md_purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/imgCancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:textSize="28sp" />
    </RelativeLayout>

    <ImageView
            android:id="@+id/img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_below="@+id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/rateus" />

    <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/md_grey_black"
            android:textSize="16sp" />


    <Button
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMessage"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@+id/rateus"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/not_good_enough"
            android:textColor="@color/md_grey_700"
            android:textSize="14sp" />

    <Button
            android:id="@+id/rateus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMessage"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/yes_star"
            android:textColor="@color/md_green_500_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

</RelativeLayout>